# kst

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .svn-author-file  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  INSTALL  INSTALL.qmake  Makefile.am  Messages.sh  NEWS  PORTINGTODO  README  README.MacOS  README.kstScript  README.md  RELEASE.NOTES  build-kst  build-kst.bat  config.h  config.h.cmake  config.pri  configure.in.in  dataobjectplugin.pri  datasourceplugin.pri  gdb-kst  gen_revision_h  get-translations  install-kst  kst.lsm.in  kst.pri  kst.pro  kst.spec.in  l10n-fetch-po-files.py  pch.h  run-kst  (+1 more)
cmake/: CMakeLists.txt  config.h.cmake  linux-release.sh  mac-release.sh  mingw-release-build-deps.bat  mingw-release-download-deps.bat  travis-mac.sh  travis.sh
cmake/misc/: CMakeLists.txt
cmake/modules/: Clang-sanitize.cmake  FindCFITSIO.cmake  FindDmc.cmake  FindGetdata.cmake  FindGsl.cmake  FindHDF5.cmake  FindLibTiff.cmake  FindLinguistForKst.cmake  FindMatio.cmake  FindNetcdf.cmake  FindNumPy.cmake  FindQt5LinguistForTrojita.cmake  FindSciPy.cmake  KstCrossCompile.cmake  KstMacros.cmake  KstPchSupport.cmake  KstRevisionGenerator.cmake  KstRevisionHeader.cmake  MergedFilesBuild.cmake  SubversionGenerator.cmake  SubversionHeader.cmake
cmake/pyKst/: CMakeLists.txt  finddistdir.py  pykstpp_h.py.cmake
cmake/src/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
misc/: CMakeLists.txt  CalSpecs  IDL 00 BW-Linear  IDL 01 Blue-White  IDL 02 GRN-RED-BLU-WHT  IDL 03 RED-Temperature  IDL 04 BLU-GRN-RED-YEL  IDL 05 STD-Gamma-II  IDL 06 PRISM  IDL 07 RED-PURPLE  IDL 08 GRN-WHT-Linear  IDL 09 GRN-WHT-Exp  IDL 10 GRN-PINK  IDL 11 BLUE-RED  IDL 12 16-Level  IDL 13 RAINBOW  IDL 14 STEPS  IDL 15 STERN-Special  IDL 16 Haze  IDL 17 BLU-Pastel-RED  IDL 18 Pastels  IDL 19 Hue-Sat-Light1  IDL 20 Hue-Sat-Light2  IDL 21 Hue-Sat-Value1  IDL 22 Hue-Sat-Value2  IDL 23 Purple-Red-Stripe  IDL 24 Beach  IDL 25 Mac-Style  IDL 26 Eos-A  IDL 27 Eos-B  IDL 28 Hardcandy  IDL 29 Nature  IDL 30 Ocean  IDL 31 Peppermint  IDL 32 Plasma  IDL 33 Blue-Red  IDL 34 Rainbow  IDL 35 Blue-Waves  IDL 36 Volcano  IDL 37 Waves  (+14 more)
misc/cfitsio-windows/: CMakeLists.txt
misc/fonts/: CMakeLists.txt  Makefile.am
misc/getdata-windows/: README.txt  mingw.patch  msvc.patch
misc/gsl-windows/: CMakeLists.txt  README.txt  config.h  gsl-mingw.patch
misc/matio-windows/: CMakeLists.txt  matioConfig.h.mingw.cmake  matio_pubconf.h.mingw.cmake
misc/netcdf-windows/: CMakeLists.txt  config.h
misc/tutorial/: CMakeLists.txt  Makefile.am  all.kst  demo.kst
src/: CMakeLists.txt  Makefile.am
src/d2asc/: CMakeLists.txt  Makefile.am  d2asc.cpp  d2asc.pro
src/d2d/: CMakeLists.txt  Makefile.am  d2d.cpp  d2d.pro
src/datasources/: CMakeLists.txt  HOWTO_add_a_datasource.txt  Makefile.am  datasources.pro
src/extdate/: CMakeLists.txt  Makefile.am  README  kstextcalendarsystem.cpp  kstextcalendarsystem.h  kstextcalendarsystemgregorian.cpp  kstextcalendarsystemgregorian.h  kstextdatepicker.cpp  kstextdatepicker.h  kstextdatetbl.cpp  kstextdatetbl.h  kstextdatetime.cpp  kstextdatetime.h  kstextdatetimeedit.cpp  kstextdatetimeedit.h  kstextdatewidget.cpp  kstextdatewidget.h
src/extensions/: CMakeLists.txt  Makefile.am
src/images/: icons.qrc  images.qrc  kstScript.txt
src/kst/: CMakeLists.txt  Makefile.am  XmlMessages.sh  bindings.html  bindings.odt  helppages.qrc  kst.1.txt  kst.desktop  kst.pro  kst2.desktop  kst2.sh.cmake  kst_icon.rc  kstautosave11.upd  kstbasicplugin.desktop  kstdataobjectplugin.desktop  kstdatasourceplugin.desktop  kstextension.desktop  kstfilter.desktop  kstplugin.desktop  kstrcmisc11.upd  kstui.rc  main-vld.cpp  main.cpp  old_main.cpp  org.kde.kst.desktop  org.kde.kst.metainfo.xml  x-kst.desktop  x-kst.xml  x-kst2.desktop
src/libkst/: CMakeLists.txt  Makefile.am  builtindatasources.cpp  builtindatasources.h  builtinprimitives.cpp  builtinprimitives.h  coredocument.cpp  coredocument.h  datacollection.cpp  datacollection.h  datamatrix.cpp  datamatrix.h  dataplugin.h  dataprimitive.cpp  dataprimitive.h  datascalar.cpp  datascalar.h  datasource.cpp  datasource.h  datasourcefactory.cpp  datasourcefactory.h  datasourcepluginfactory.cpp  datasourcepluginfactory.h  datasourcepluginmanager.cpp  datasourcepluginmanager.h  datastring.cpp  datastring.h  datavector.cpp  datavector.h  dateparser.cpp  dateparser.h  debug.cpp  debug.h  defaultprimitivenames.cpp  defaultprimitivenames.h  dialogdefaults.cpp  dialogdefaults.h  editablematrix.cpp  editablematrix.h  editablevector.cpp  (+158 more)
src/libkstapp/: CMakeLists.txt  FileFormats  Makefile.am  TODO  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  application.cpp  application.h  applicationsettings.cpp  applicationsettings.h  applicationsettingsdialog.cpp  applicationsettingsdialog.h  arrowitem.cpp  arrowitem.h  arrowitemdialog.cpp  arrowitemdialog.h  arrowpropertiestab.cpp  arrowpropertiestab.h  arrowpropertiestab.ui  arrowscriptinterface.cpp  arrowscriptinterface.h  axis.cpp  axis.h  axistab.cpp  axistab.h  axistab.ui  baddatasourcedialog.cpp  baddatasourcedialog.h  baddatasourcedialog.ui  basicdialogwidget.ui  basicplugindialog.cpp  basicplugindialog.h  basicplugintab.ui  boxitem.cpp  boxitem.h  bugreportwizard.cpp  bugreportwizard.h  bugreportwizard.ui  builtindatasources.h  (+666 more)
src/libkstkmdi/: CMakeLists.txt  Makefile.am  kdockwidget.cpp  kdockwidget.h  kmdimainfrm.h  (+21 more)
tests/: CMakeLists.txt  HOWTO  Makefile.am  datagenerator.pl  ksttest.h  main.cpp  matlab.kst  runregression.sh  test1.sh  testamatrix.cpp  testamatrix.h  testcsd.cpp  testcsd.h  testdatamatrix.cpp  testdatamatrix.h  testdatasource.cpp  testdatasource.h  testdatasources.cpp  testdatasources.h  testeditablematrix.cpp  testeditablematrix.h  testeqparser.cpp  testeqparser.h  testfitstable.fits  testgeneratedmatrix.cpp  testgeneratedmatrix.h  testgeneratedvector.cpp  testgeneratedvector.h  testhistogram.cpp  testhistogram.h  testlabelparser.cpp  testlabelparser.h  testmatrix.cpp  testmatrix.h  testobjectstore.cpp  testobjectstore.h  testpsd.cpp  testpsd.h  testrvector.cpp  tests.pro  (+7 more)
(+2081 files in other folders)
