
SUBDIRS=. fonts tutorial

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(kde_confdir)/colors
	$(INSTALL_DATA) "$(srcdir)/Kst Colors" "$(DESTDIR)$(kde_confdir)/colors/Kst Colors"
	$(INSTALL_DATA) "$(srcdir)/Kst Grayscale 256" "$(DESTDIR)$(kde_confdir)/colors/Kst Grayscale 256"
	$(INSTALL_DATA) "$(srcdir)/Kst Spectrum 1021" "$(DESTDIR)$(kde_confdir)/colors/Kst Spectrum 1021"
	$(INSTALL_DATA) "$(srcdir)/IDL 00 BW-Linear" "$(DESTDIR)$(kde_confdir)/colors/IDL 00 BW-Linear"
	$(INSTALL_DATA) "$(srcdir)/IDL 01 Blue-White" "$(DESTDIR)$(kde_confdir)/colors/IDL 01 Blue-White"
	$(INSTALL_DATA) "$(srcdir)/IDL 02 GRN-RED-BLU-WHT" "$(DESTDIR)$(kde_confdir)/colors/IDL 02 GRN-RED-BLU-WHT"
	$(INSTALL_DATA) "$(srcdir)/IDL 03 RED-Temperature" "$(DESTDIR)$(kde_confdir)/colors/IDL 03 RED-Temperature"
	$(INSTALL_DATA) "$(srcdir)/IDL 04 BLU-GRN-RED-YEL" "$(DESTDIR)$(kde_confdir)/colors/IDL 04 BLU-GRN-RED-YEL"
	$(INSTALL_DATA) "$(srcdir)/IDL 05 STD-Gamma-II" "$(DESTDIR)$(kde_confdir)/colors/IDL 05 STD-Gamma-II"
	$(INSTALL_DATA) "$(srcdir)/IDL 06 PRISM" "$(DESTDIR)$(kde_confdir)/colors/IDL 06 PRISM"
	$(INSTALL_DATA) "$(srcdir)/IDL 07 RED-PURPLE" "$(DESTDIR)$(kde_confdir)/colors/IDL 07 RED-PURPLE"
	$(INSTALL_DATA) "$(srcdir)/IDL 08 GRN-WHT-Linear" "$(DESTDIR)$(kde_confdir)/colors/IDL 08 GRN-WHT-Linear"
	$(INSTALL_DATA) "$(srcdir)/IDL 09 GRN-WHT-Exp" "$(DESTDIR)$(kde_confdir)/colors/IDL 09 GRN-WHT-Exp"
	$(INSTALL_DATA) "$(srcdir)/IDL 10 GRN-PINK" "$(DESTDIR)$(kde_confdir)/colors/IDL 10 GRN-PINK"
	$(INSTALL_DATA) "$(srcdir)/IDL 11 BLUE-RED" "$(DESTDIR)$(kde_confdir)/colors/IDL 11 BLUE-RED"
	$(INSTALL_DATA) "$(srcdir)/IDL 12 16-Level" "$(DESTDIR)$(kde_confdir)/colors/IDL 12 16-Level"
	$(INSTALL_DATA) "$(srcdir)/IDL 13 RAINBOW" "$(DESTDIR)$(kde_confdir)/colors/IDL 13 RAINBOW"
	$(INSTALL_DATA) "$(srcdir)/IDL 14 STEPS" "$(DESTDIR)$(kde_confdir)/colors/IDL 14 STEPS"
	$(INSTALL_DATA) "$(srcdir)/IDL 15 STERN-Special" "$(DESTDIR)$(kde_confdir)/colors/IDL 15 STERN-Special"
	$(INSTALL_DATA) "$(srcdir)/IDL 16 Haze" "$(DESTDIR)$(kde_confdir)/colors/IDL 16 Haze"
	$(INSTALL_DATA) "$(srcdir)/IDL 17 BLU-Pastel-RED" "$(DESTDIR)$(kde_confdir)/colors/IDL 17 BLU-Pastel-RED"
	$(INSTALL_DATA) "$(srcdir)/IDL 18 Pastels" "$(DESTDIR)$(kde_confdir)/colors/IDL 18 Pastels"
	$(INSTALL_DATA) "$(srcdir)/IDL 19 Hue-Sat-Light1" "$(DESTDIR)$(kde_confdir)/colors/IDL 19 Hue-Sat-Light1"
	$(INSTALL_DATA) "$(srcdir)/IDL 20 Hue-Sat-Light2" "$(DESTDIR)$(kde_confdir)/colors/IDL 20 Hue-Sat-Light2"
	$(INSTALL_DATA) "$(srcdir)/IDL 21 Hue-Sat-Value1" "$(DESTDIR)$(kde_confdir)/colors/IDL 21 Hue-Sat-Value1"
	$(INSTALL_DATA) "$(srcdir)/IDL 22 Hue-Sat-Value2" "$(DESTDIR)$(kde_confdir)/colors/IDL 22 Hue-Sat-Value2"
	$(INSTALL_DATA) "$(srcdir)/IDL 23 Purple-Red-Stripe" "$(DESTDIR)$(kde_confdir)/colors/IDL 23 Purple-Red-Stripe"
	$(INSTALL_DATA) "$(srcdir)/IDL 24 Beach" "$(DESTDIR)$(kde_confdir)/colors/IDL 24 Beach"
	$(INSTALL_DATA) "$(srcdir)/IDL 25 Mac-Style" "$(DESTDIR)$(kde_confdir)/colors/IDL 25 Mac-Style"
	$(INSTALL_DATA) "$(srcdir)/IDL 26 Eos-A" "$(DESTDIR)$(kde_confdir)/colors/IDL 26 Eos-A"
	$(INSTALL_DATA) "$(srcdir)/IDL 27 Eos-B" "$(DESTDIR)$(kde_confdir)/colors/IDL 27 Eos-B"
	$(INSTALL_DATA) "$(srcdir)/IDL 28 Hardcandy" "$(DESTDIR)$(kde_confdir)/colors/IDL 28 Hardcandy"
	$(INSTALL_DATA) "$(srcdir)/IDL 29 Nature" "$(DESTDIR)$(kde_confdir)/colors/IDL 29 Nature"
	$(INSTALL_DATA) "$(srcdir)/IDL 30 Ocean" "$(DESTDIR)$(kde_confdir)/colors/IDL 30 Ocean"
	$(INSTALL_DATA) "$(srcdir)/IDL 31 Peppermint" "$(DESTDIR)$(kde_confdir)/colors/IDL 31 Peppermint"
	$(INSTALL_DATA) "$(srcdir)/IDL 32 Plasma" "$(DESTDIR)$(kde_confdir)/colors/IDL 32 Plasma"
	$(INSTALL_DATA) "$(srcdir)/IDL 33 Blue-Red" "$(DESTDIR)$(kde_confdir)/colors/IDL 33 Blue-Red"
	$(INSTALL_DATA) "$(srcdir)/IDL 34 Rainbow" "$(DESTDIR)$(kde_confdir)/colors/IDL 34 Rainbow"
	$(INSTALL_DATA) "$(srcdir)/IDL 35 Blue-Waves" "$(DESTDIR)$(kde_confdir)/colors/IDL 35 Blue-Waves"
	$(INSTALL_DATA) "$(srcdir)/IDL 36 Volcano" "$(DESTDIR)$(kde_confdir)/colors/IDL 36 Volcano"
	$(INSTALL_DATA) "$(srcdir)/IDL 37 Waves" "$(DESTDIR)$(kde_confdir)/colors/IDL 37 Waves"
	$(INSTALL_DATA) "$(srcdir)/IDL 38 Rainbow18" "$(DESTDIR)$(kde_confdir)/colors/IDL 38 Rainbow18"
	$(INSTALL_DATA) "$(srcdir)/IDL 39 Rainbow-White" "$(DESTDIR)$(kde_confdir)/colors/IDL 39 Rainbow-White"
	$(INSTALL_DATA) "$(srcdir)/IDL 40 Rainbow-Black" "$(DESTDIR)$(kde_confdir)/colors/IDL 40 Rainbow-Black"


